[package]
name = "deno_pw_hashing"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = "=0.2.84"
argon2 = "0.5.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.21.0"